# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
digimon/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
digimon/migrations/: 0001_initial.py  0002_auto_20210110_1438.py
digimon_project/: asgi.py  settings.py  urls.py  wsgi.py
